--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==3.4.7
 dominate==2.6.0
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
+Flask-SSLify==0.1.5
 Flask-WTF==0.14.3
 gunicorn==20.1.0
 idna==2.10
